[gd_scene load_steps=4 format=3 uid="uid://cedqyocfua7iq"]

[ext_resource type="Script" path="res://Scripts/bullet.gd" id="1_fmdvm"]
[ext_resource type="Texture2D" uid="uid://bc6uasp7o6qfy" path="res://bullet.png" id="1_irhcn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0p6ad"]
radius = 13.0384

[node name="Bullet" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_fmdvm")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_irhcn")

[node name="DestroyTimer" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_0p6ad")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_destroy_timer_timeout"]
